--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ javafx {
 }
 
 dependencies {
+    implementation 'com.jfoenix:jfoenix:9.0.10'
+
     implementation('org.controlsfx:controlsfx:11.1.0')
     implementation('com.dlsc.formsfx:formsfx-core:11.3.2') {
         exclude(group: 'org.openjfx')
