--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
     implementation 'org.postgresql:postgresql:42.3.1'
+    implementation 'org.apache.pdfbox:pdfbox:2.0.25'
 }
 
 test {
